--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -274,6 +274,27 @@ html, body {
   justify-content: center;
 }
 
+.scroll-area {
+  .ps__thumb-y {
+    background: #FCAB2D;
+  }
+
+  .ps__rail-y {
+    display: block;
+    opacity: 1;
+
+    &:hover {
+      opacity: 1;
+    }
+  }
+
+  .ps__rail-y:hover > .ps__thumb-y,
+  .ps__rail-y:focus > .ps__thumb-y,
+  .ps__rail-y.ps--clicking .ps__thumb-y {
+    background: #FCAB2D;
+  }
+}
+
 .header {
   position: fixed;
   width: 100%;
@@ -1388,7 +1409,7 @@ html, body {
     display: flex;
     align-items: center;
     padding: 10px 14px;
-    padding-right: 5px;
+    padding-right: 4px;
     height: 36px !important;
 
     &:last-of-type {
@@ -1466,11 +1487,17 @@ html, body {
     }
 
     &__info-area {
-      overflow-y: auto;
       min-width: 656px;
       min-height: 600px;
       height: 70vh;
-      padding-right: 24px;
+
+      &.scroller {
+        .scroll-area {
+          position: relative;
+          width: 100%;
+          height: 100%;
+        }
+      }
 
       &.slider {
         display: none;
@@ -1487,6 +1514,7 @@ html, body {
       border-radius: 8px;
       display: flex;
       margin-bottom: 24px;
+      margin-right: 24px;
       border: 1px solid transparent;
       transition: border-color .2s ease, box-shadow .2s ease;
 
@@ -1795,6 +1823,56 @@ html, body {
         line-height: 170%;
         margin-bottom: 0;
         color: #393E48;
+      }
+    }
+  }
+
+  &__pt {
+    &__title {
+      margin-bottom: 35px;
+    }
+
+    &__bottom {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+
+    &__left {
+      display: flex;
+      align-items: flex-end;
+    }
+
+    &__type {
+      display: flex;
+      height: 100%;
+      border: none;
+      background: none;
+      margin-right: 40px;
+      padding: 0;
+
+      &.active {
+        border-bottom: 6px solid #FCAB2D;
+      }
+
+      &:focus {
+        outline: none;
+      }
+
+      &:last-of-type {
+        margin-right: 0;
+      }
+
+      span {
+        font-size: 16px;
+        line-height: 120%;
+        color: #393E48;
+      }
+
+      &-inner {
+        display: flex;
+        align-items: center;
+        margin-bottom: 10px;
       }
     }
   }
@@ -2153,7 +2231,7 @@ html, body {
       transition: color .2s ease;
 
       &:hover {
-        color: black;
+        color: #9ea2ad;
       }
 
       span {
@@ -2662,25 +2740,6 @@ html, body {
         position: relative;
         height: 650px;
         padding-right: 24px;
-
-        .ps__thumb-y {
-          background: #FCAB2D;
-        }
-
-        .ps__rail-y {
-          display: block;
-          opacity: 1;
-
-          &:hover {
-            opacity: 1;
-          }
-        }
-
-        .ps__rail-y:hover > .ps__thumb-y,
-        .ps__rail-y:focus > .ps__thumb-y,
-        .ps__rail-y.ps--clicking .ps__thumb-y {
-          background: #FCAB2D;
-        }
       }
 
       &__card {
