--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -610,7 +610,7 @@ input { &::-ms-clear { display: none; } }
       &:hover {
         background: white;
         color: #FCAB2D;
-        border-color: #C4C4C4;
+        border-color: #228596;
       }
 
       &:focus {
@@ -672,7 +672,19 @@ input { &::-ms-clear { display: none; } }
           color: black;
           border: none;
           width: 100%;
-          min-width: 85px;
+          min-width: 105px;
+
+          &.vs {
+            &--open {
+              .vs {
+                &__dropdown {
+                  &-toggle {
+                    border-radius: 6px 6px 0 0;
+                  }
+                }
+              }
+            }
+          }
 
           .vs {
             &__dropdown {
@@ -680,7 +692,7 @@ input { &::-ms-clear { display: none; } }
                 border: 1px solid #228596;
                 border-radius: 6px;
                 padding: 16px 20px;
-                padding-right: 18px;
+                padding-right: 14px;
                 min-height: 55px;
                 height: 100%;
               }
@@ -704,6 +716,10 @@ input { &::-ms-clear { display: none; } }
             &__selected {
               margin: 0;
               padding: 0;
+
+              &-options {
+                padding: 0;
+              }
             }
 
             &__search {
@@ -735,6 +751,19 @@ input { &::-ms-clear { display: none; } }
 
           .v-select {
             &:first-of-type {
+              &.vs {
+                &--open {
+                  .vs {
+                    &__dropdown {
+                      &-toggle {
+                        border-radius: 6px 0 0 0;
+                        border-right: none;
+                      }
+                    }
+                  }
+                }
+              }
+
               .vs {
                 &__dropdown {
                   &-toggle {
@@ -747,6 +776,18 @@ input { &::-ms-clear { display: none; } }
 
             &:last-of-type {
               width: auto;
+
+              &.vs {
+                &--open {
+                  .vs {
+                    &__dropdown {
+                      &-toggle {
+                        border-radius: 0 6px 0 0;
+                      }
+                    }
+                  }
+                }
+              }
 
               .vs {
                 &__dropdown {
@@ -1402,17 +1443,22 @@ input { &::-ms-clear { display: none; } }
         margin-right: 3px;       
 
         &-number {
+          font-size: 24px;
+          font-weight: 700;
+          line-height: 100%;
+          color: #FCAB2D;
           margin-right: 4px;
 
           &-area {
             display: flex;
-            align-items: center;
+            align-items: flex-end;
             position: absolute;
             bottom: 30px;
             left: 40px;
-            font-size: 10px;
-            line-height: 100%;
-            letter-spacing: 0.06em;
+            font-size: 14px;
+            letter-spacing: 0.01em;
+            text-transform: lowercase;
+            line-height: 16px;
             transition: color .2s ease;
 
             &:after {
@@ -1422,6 +1468,7 @@ input { &::-ms-clear { display: none; } }
               width: 6px;
               height: 10px;
               padding-left: 5px;
+              margin-bottom: 2px;
               background: url("../../static/pics/global/svg/arrow_next_orange.svg") no-repeat;
             }
 
@@ -1731,6 +1778,15 @@ input { &::-ms-clear { display: none; } }
     margin-bottom: 20px;
   }
 
+  &__visited-empty {
+    font-size: 18px;
+    line-height: 18px;
+    color: #393E48;
+    opacity: .6;
+    font-weight: 700;
+    margin-bottom: 30px;
+  }
+
   &__favorites-type {
     border-radius: 33px;
     border: none;
@@ -1812,14 +1868,93 @@ input { &::-ms-clear { display: none; } }
   }
 
   &-sections {
+    position: fixed;
+    top: 106px;
+    left: 0;
+    max-width: 100vw;
+    margin: 0 !important;
+    z-index: 10;
+
+    &--w-100 {
+      .custom-container {
+        width: 100%;
+      }
+    }
+
+    .swiper-slide {
+      &:first-of-type {
+        margin-left: -10px;
+      }
+
+      &:last-of-type {
+        margin-right: -10px;
+      }
+    }
+
+    &.event-page-sections {
+      &.slider-weather__months {
+        .custom-container {
+          margin: 0;
+        }
+
+        .swiper-wrapper {
+          justify-content: flex-start;
+        }
+      }
+    }
+
     &.slider {
       &-weather {
         &__month {           
           &s {
-             margin-bottom: 15px;
+            margin-left: -10px;
+            margin-right: -10px;
+            margin-bottom: 15px;
+            width: 100%;
 
             .swiper-wrapper {
-              justify-content: flex-start;
+              &:before {
+                display: block;
+                content: '';
+                background: white;
+                position: absolute;
+                top: -5px;
+                height: 37px;
+                z-index: -1;
+                width: 100%;
+              }
+            }
+
+            .swiper-slide {
+              &:before {
+                display: block;
+                content: '';
+                background: white;
+                position: absolute;
+                left: -1px;
+                right: -1px;
+                top: -5px;
+                height: 37px;
+                z-index: -1;
+              }
+
+              &.active {
+                z-index: 1;
+              }
+
+              &:first-of-type {
+                &:before {
+                  left: -5px;
+                  border-radius: 100px 0 0 100px;
+                }
+              }
+
+              &:last-of-type {
+                &:before {
+                  right: -5px;
+                  border-radius: 0 100px 100px 0;
+                }
+              }
             }
 
             .swiper-slide {
@@ -1980,6 +2115,14 @@ input { &::-ms-clear { display: none; } }
 
     &__title {
       margin-bottom: 30px;
+
+      &-area {
+        margin-bottom: 0;
+      }
+    }
+
+    &__see-all {
+      display: none !important;
     }
 
     .swiper-container {
@@ -3075,6 +3218,7 @@ input { &::-ms-clear { display: none; } }
   &__date-area {
     font-size: 16px;
     line-height: 19px;
+    margin-bottom: 6px;
 
     img {
       margin-right: 6px;
@@ -3086,9 +3230,9 @@ input { &::-ms-clear { display: none; } }
     line-height: 120%;
     color: #393E48 !important;
     margin-bottom: 7px;
-    padding-top: 5px;
-    display: block;
+    display: inline-block;
     transition: opacity .2s ease;
+    width: 100%;
 
     &:hover {
       opacity: .7;
@@ -3374,6 +3518,7 @@ input { &::-ms-clear { display: none; } }
       &s {
         display: flex;
         justify-content: space-between;
+        margin: 0 -20px;
         margin-bottom: 50px;
 
         .swiper-container {
@@ -3382,41 +3527,13 @@ input { &::-ms-clear { display: none; } }
         }
 
         .swiper-wrapper {
-          justify-content: center;
+          justify-content: space-between;
         }
 
         .swiper-slide {
           @include flex-center;
           overflow: visible;
           width: fit-content !important;
-
-          &:first-of-type {
-            .slider-weather__month {
-              &:before {
-                min-width: 0;
-              }
-
-              &.active {
-                &:before {
-                  min-width: 20px;
-                }
-              }
-            }
-          }
-
-          &:last-of-type {
-            .slider-weather__month {
-              &:after {
-                min-width: 0;
-              }
-
-              &.active {
-                &:after {
-                  min-width: 20px;
-                }
-              }
-            }
-          }
         }
       }
     }
@@ -3587,6 +3704,7 @@ input { &::-ms-clear { display: none; } }
   &-beach-event {
     display: flex;
     height: 460px;
+    margin-top: 18px;
     margin-bottom: 15px;
 
     &__left {
@@ -4317,7 +4435,6 @@ input { &::-ms-clear { display: none; } }
 
 .card-grid {
   display: flex;
-  justify-content: center;
   flex-wrap: wrap;
 
   &__card {
@@ -4330,6 +4447,12 @@ input { &::-ms-clear { display: none; } }
 
 .overlay-map {
   overflow: hidden;
+}
+
+.event-page {
+  &__hearts {
+    display: none;
+  }
 }
 
 // fixing
@@ -4670,6 +4793,10 @@ input { &::-ms-clear { display: none; } }
       }
     }
 
+    &__side-buttons {
+      top: 115px;
+    }
+
     &__map-weather {
       display: flex;
       flex-direction: row-reverse;
@@ -4687,9 +4814,8 @@ input { &::-ms-clear { display: none; } }
       }
 
       &__event-page {
-        display: flex !important;
-        flex-direction: column-reverse !important;
-        margin-bottom: 0 !important;
+        display: flex;
+        margin-bottom: 0;
 
         .beach-event {
           &__map-weather {
@@ -4745,6 +4871,16 @@ input { &::-ms-clear { display: none; } }
   .beach-page {
     &__events {
       overflow: visible;
+    }
+
+    &__quick-data {
+      &__title {
+        font-weight: 700 !important;
+      }
+    }
+
+    &__announcement {
+      display: none;
     }
 
     &__opinions {
@@ -5510,6 +5646,8 @@ input { &::-ms-clear { display: none; } }
       padding: 10px 12px;
 
       &s {
+        margin-left: -10px;
+        margin-right: -10px;
         margin-bottom: 18px;
       }
     }
@@ -5557,6 +5695,8 @@ input { &::-ms-clear { display: none; } }
     }
 
     &-beach-event {
+      margin-top: 31px;
+
       &__medal {
         &-gold, &-blue {
           top: 10px;
@@ -5673,6 +5813,10 @@ input { &::-ms-clear { display: none; } }
       }
     }
 
+    &-sections {
+      top: 74px;
+    }
+
     &__sections {
       &__section {
         font-size: 14px;
@@ -5683,6 +5827,21 @@ input { &::-ms-clear { display: none; } }
     &__events {
       .swiper-slide {
         max-width: 220px;
+      }
+
+      &__title {
+        margin-bottom: 0;
+
+        &-area {
+          display: flex;
+          justify-content: space-between;
+          align-items: center;
+          margin-bottom: 30px;
+        }
+      }
+
+      &__see-all {
+        display: flex !important;
       }
     }
 
@@ -5905,6 +6064,10 @@ input { &::-ms-clear { display: none; } }
           line-height: 14px;
         }
       }
+    }
+
+    &__similar-beaches {
+      margin-bottom: 15px;
     }
   }
 
@@ -6644,6 +6807,8 @@ input { &::-ms-clear { display: none; } }
     &__quick-data {
       &__item {
         flex-direction: row;
+        height: 60px;
+        margin-bottom: 25px;
 
         span {
           text-align: left;
@@ -6651,11 +6816,15 @@ input { &::-ms-clear { display: none; } }
         }
 
         img {
+          width: 60px;
+          height: 60px;
+          padding: 8px;
           margin-right: 15px;
+          margin-bottom: 0;
         }
 
         &s {
-          flex-direction: column;
+          display: block;
           height: 120px;
           overflow: hidden;
           position: relative;
@@ -6674,7 +6843,7 @@ input { &::-ms-clear { display: none; } }
           }
 
           &.active {
-            height: 350px;
+            height: 425px;
 
             &:before {
               opacity: 0;
@@ -7049,6 +7218,12 @@ input { &::-ms-clear { display: none; } }
         margin-bottom: 16px;
       }
     }
+
+    .card-grid {
+      &__card {
+        margin-bottom: 40px !important;
+      }
+    }
   }
 
   .main-page {
@@ -7312,6 +7487,7 @@ input { &::-ms-clear { display: none; } }
     }
 
     &-beach-event {
+      margin-top: 23px;
       margin-bottom: 46px;
 
       .pagination-wrapper {
@@ -7414,9 +7590,25 @@ input { &::-ms-clear { display: none; } }
       margin-bottom: 15px;
     }
 
+    .pagination-wrapper {
+      margin-top: 20px;
+    }
+
     &__events {
+      &__see-all {
+        display: none !important;
+      }
+
       .swiper-slide {
         max-width: 135px;
+      }
+
+      &__title {
+        margin-bottom: 20px;
+
+        &-area {
+          margin-bottom: 0;
+        }
       }
     }
 
@@ -7482,9 +7674,58 @@ input { &::-ms-clear { display: none; } }
     }
 
     &-sections {
+      &.slider-weather__months {
+        .swiper-wrapper, .swiper-slide {
+          &:before {
+            height: 34px;
+          }
+        }
+      }
+
       .slider-weather__month {
         font-size: 12px;
         line-height: 14px;
+      }
+    }
+  }
+
+  .event-page {
+    &__side-buttons {
+      display: none;
+    }
+
+    &__hearts {
+      display: block;
+      margin: 0;
+      padding: 0;
+      margin-bottom: 14px;
+      border: none;
+      background: none;
+
+      &:focus {
+        outline: none;
+      }
+
+      img {
+        width: 23px;
+        height: 22px;
+        margin-right: 9;
+      }
+
+      span {
+        font-size: 12px;
+        line-height: 120%;
+        color: #393E48;
+      }
+    }
+
+    &__main-info {
+      .beach-event {
+        &__main-info {
+          &__hearts {
+            display: none;
+          }
+        }
       }
     }
   }
@@ -7505,6 +7746,10 @@ input { &::-ms-clear { display: none; } }
           min-height: 300px;
           max-height: 300px;
         }
+      }
+
+      &__title {
+        margin-bottom: 10px;
       }
 
       &__type {
@@ -7530,7 +7775,6 @@ input { &::-ms-clear { display: none; } }
 
       &__comment-area {
         span {
-          display: block;
           height: 42px;
         }
       }
@@ -7547,13 +7791,19 @@ input { &::-ms-clear { display: none; } }
       }
 
       &__title {
-        margin-bottom: 20px;
+        margin-bottom: 10px;
       }
     }
 
     &__side-buttons {
       right: 13px;
       top: 200px;
+    }
+
+    &__map-weather {
+      &__weather-card {
+        padding: 20px 10px;
+      }
     }
   }
 
